Update for Angular CLI 16

--- a/src/app/shared/admin.component.html
+++ b/src/app/shared/admin.component.html
@@ -3,5 +3,5 @@
 <p style="margin-bottom: 80px">
     This is the admin section.
     <br>
-    (It is not secured as this is not the point of this demo)
+    (Access is not secured as this is not the point of this demo)
 </p>
