--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -2,7 +2,14 @@
     {{ title }}
 </h2>
 
+<h3 *ngIf="favouriteAdded">
+    Product {{ favouriteAdded.name }} added to your favourites!
+</h3>
+
 <div class="right">
+    {{ productsNumber$ | async }} products <span *ngIf="filtered$ | async">(filtered)</span> /
+
+
     {favourites, plural,
     =0 {no favourite}
     =1 {1 favourite}
@@ -10,15 +17,11 @@
     }
 </div>
 <div>
-    <!-- Search: <input type="text" [formControl]="filter" placeholder="filter by name"> -->
+    Search: <input type="text" [formControl]="filter" placeholder="filter by name">
     &nbsp;
 </div>
 
-<ng-template #loading>
-    <h2 class="loading">Loading products</h2>
-</ng-template>
-
-<ul class="products" *ngIf="products$ | async as products;else loading">
+<ul class="products" *ngIf="filteredProducts$ | async as products">
     <li *ngFor="let product of products | slice:start:end"
         (click)="onSelect(product)"
         [class.discontinued]="product.discontinued"
@@ -40,7 +43,8 @@
         < Previous Page
     </button>
     Page {{ currentPage }}
-    <button (click)="nextPage()">
+    <button (click)="nextPage()"
+            [disabled]="(productsNumber$ | async) <= end">
         Next Page >
     </button>
 </div>
